--- a/index.html
+++ b/index.html
@@ -47,15 +47,18 @@
         };
         </pre>
     </p>
-    <p>Q.2 Write a program which takes an array as input from the user and find out the sum of the array elements. Note: You have to complete Find_Sum. No need to take any input.</p>
-    <p><pre>Ans.2 const Find_Sum = (array, N) => 
-        {
-          var a=0;
-          for (i=0; i < N; i++)
-          {
-            a+=array[i];
-          }
-          return a;
+    <p>Q.2 You are given a string S containing both uppercase and lowercase letters. You need to find out the number of vowels in the given string. Note: You have to complete Count_Vowel function. No need to take any input.</p>
+    <p><pre>Ans.2 var Count_Vowels= (S) => 
+        { var count=0;
+           for (i=0; i < S.length; i++)
+           {
+             if ((S.charAt(i)==='A')||(S.charAt(i)==='a')||(S.charAt(i)==='E')
+                ||(S.charAt(i)==='e')||(S.charAt(i)==='I')||(S.charAt(i)==='i')||(S.charAt(i)==='O')
+                ||(S.charAt(i)==='o')||(S.charAt(i)==='U')||(S.charAt(i)==='u'))
+             {
+              count++; 
+             }
+           } return count;
         };</pre>
     </p>
     <p>Q.3 You are given an array A containing N integer elements and an integer K, and your task is to return the count of occurrences of K in array A. Note: You have to complete findCount function. No need to take any input.</p>
