--- a/index.html
+++ b/index.html
@@ -61,18 +61,12 @@
            } return count;
         };</pre>
     </p>
-    <p>Q.3 You are given an array A containing N integer elements and an integer K, and your task is to return the count of occurrences of K in array A. Note: You have to complete findCount function. No need to take any input.</p>
-    <p><pre>Ans.3 const findCount = (N, K, Arr) => 
+    <p>Q.3 You are given two strings S1 and S2 (containing both uppercase and lowercase letters), You need to retrun a string which is the concatenation of both the given strings. Note: You have to complete Concatenate_Strings function. No need to take any input.</p>
+    <p><pre>Ans.3 var Concatenate_Strings = (S1, S2) => 
         {
-          var c=0;
-           for (i=0; i < N; i++)
-           {
-             if (Arr[i]===K)
-             {
-               c++;
-             }
-           }
-           return c;
+           var S3=S1;
+           S3+=S2;
+           return S3 ;
         };</pre>
     </p>
     <p>Q.4 You are given an array A containing N integer elements, and your task is to return an array B(having a size equal to 2), where B[0] contains the sum of all even elements of array A and B[1] has the sum of all odd elements of the array A. Note: You have to complete findEvenOdd function. No need to take any input.</p>
