--- a/index.html
+++ b/index.html
@@ -69,36 +69,48 @@
            return S3 ;
         };</pre>
     </p>
-    <p>Q.4 You are given an array A containing N integer elements, and your task is to return an array B(having a size equal to 2), where B[0] contains the sum of all even elements of array A and B[1] has the sum of all odd elements of the array A. Note: You have to complete findEvenOdd function. No need to take any input.</p>
-    <p><pre>Ans.4 const findEvenOdd = (N, Arr) => 
+    <p>Q.4 You are given a string S, and your task is to return the length of the string S. Note: You have to solve it without using length method. You have to complete findLength function. No need to take any input.</p>
+    <p><pre>Ans.4 const findLength = (S) => 
         {
-          var c=[0,0];
-            for (i=0; i < N; i++)
-            {
-              if (Arr[i]%2===0)
-              {
-                c[0]+=Arr[i];
-              }
-              else
-              {
-                c[1]+=Arr[i];
-              }
-            }
-            return c;
+          var i=0;
+          var count=0;
+          while (S.charAt(i))
+          {
+            count++;
+            i++;
+          }
+          return count;
         };</pre>
     </p>
-    <p>Q.5 Write a program which takes an array as input from the user and a number. Check whether the number is present or not. Note: You have to complete Find_Num. No need to take any input.</p>
-    <p><pre>Ans.5 const Find_Num = (array,N,M) => 
+    <p>Q.5 You are given a string S consisting of two letters A and D,where each character represent the winner of N games played between Aditya and Danish, where letter A represents the win of Aditya and letter D represents the win of Danish. You need to find out the that which player wins the maximum number of games or there is a draw between them. Note: You have to complete Game_Winner function. No need to take any input.</p>
+    <p><pre>Ans.5 var Game_Winner = (S) => 
         {
-          for (i=0; i < N; i++)
+          var countA=0;
+          var countD=0;
+          for (i=0; i < S.length; i++)
           {
-            if (array[i]===M)
+            if (S.charAt(i)==='A')
             {
-              return "YES";
+              countA++;
+            }
+            else
+            {
+              countD++;
             }
           }
-          return "NO";
-        };</pre>
+          if (countA>countD)
+          {
+            return "Aditya";
+          }
+          else if (countD>countA)
+          {
+            return "Danish";
+          }
+          else 
+          {
+            return "Draw";
+          }
+        }</pre>
     </p>
     <p>Q.6 You are given an array A containing the age of persons in your locality, and your task is to find and return an array containing the age of persons that are over 18(18 included). Note: Also, in the output array, the age should be in the same order as in the input array. You have to complete highAge function. No need to take any input.</p>
     <p><pre>Ans.6 const highAge = (N, Arr) => 
