--- a/index.html
+++ b/index.html
@@ -112,94 +112,101 @@
           }
         }</pre>
     </p>
-    <p>Q.6 You are given an array A containing the age of persons in your locality, and your task is to find and return an array containing the age of persons that are over 18(18 included). Note: Also, in the output array, the age should be in the same order as in the input array. You have to complete highAge function. No need to take any input.</p>
-    <p><pre>Ans.6 const highAge = (N, Arr) => 
+    <p>Q.6 You are given two strings S and P, and your task is to concatenate them and return the concatenated string. Note: You have to complete joinStrings function. No need to take any input.</p>
+    <p><pre>Ans.6 const joinStrings = (S, P) => 
         {
-          var a=[];
-           for (i=0; i < N; i++)
-           {
-             if (Arr[i]>=18)
-             {
-               a.push(Arr[i]);
-             }
-           }
-           return a;
+            var final=S;
+            final+=P;
+            return final;
         };</pre>
     </p>
-    <p>Q.7 You are provided an array of integers and you have to increment all array elements by 1 and then print whole array. You have to complete Inc_Arr. No need to take any input.</p>
+    <p>Q.7 You are given a string S, Your task is to check wether the given string is a Palindrome or not. A        Palindrome is a string, which turnout same when read in reverse direction. Example: "naman" is a Palindrome.String can contain both upppercase lowercase letters. Note: You have to complete Plain_Check function. No need to take any input.</p>
     <p><pre>Ans.7 
-        const Inc_Arr = (array,N) => 
+        var Palin_Check = (str) =>
+{
+	 var reverse="";
+	 for(i=str.length-1; i>=0; i--)
+	 {
+	   reverse+=str.charAt(i);
+	 }
+	 if (reverse===str)
+	 {
+	   return "True";
+	 }
+	 else 
+	 {
+	   return "False";
+	 }
+}</pre>
+    </p>
+    <p>Q.8 You are given a string S, Your task is to Reverse the string. String can contain both upppercase lowercase letters. Note: You have to complete Reverse_String function. No need to take any input.</p>
+    <p><pre>Ans.8 var Reverse_String = (str) => 
         {
-          for (i=0; i < N; i++)
+          var reverse="";
+          for (i=str.length-1; i>=0; i--)
           {
-            console.log(array[i]+1);
+            reverse+=str.charAt(i);
+          }
+          return reverse;
+        };</pre>
+    </p>
+    <p>Q.9 You are given two strings S1 and S2, Your task is to print YES if both strings are same else print NO. Note: You have to complete String_Match function. No need to take any input.</p>
+    <p><pre>Ans.9 var String_Match = (S1,S2) => 
+        {
+          var count=0;
+          var large="";
+          if (S1>S2)
+          {
+            large=S1;
+          }
+          else 
+          {
+            large=S2;
+          }
+          for (i=0; i < large.length; i++)
+          {
+            if (S1.charAt(i)!==S2.charAt(i))
+            {
+              count++;
+            }
+          }
+          if (count>0)
+          {
+            return "NO";
+          }
+          else
+          {
+            return "YES";
           }
         };</pre>
     </p>
-    <p>Q.8 You are given an array A containing the maths marks of students in your class, and your task is to determine if all the students pass in your class or not. A student is declared pass if his maths marks are greater than or equal to 32. If all the students pass in your class, return "YES" (without quotes); otherwise, return "NO" (without quotes). Note: You have to complete isAllPass function. No need to take any input.</p>
-    <p><pre>Ans.8 const isAllPass = (N, Arr) => 
+    <p>Q.10 You are given a string S containing both uppercase and lowercase letters. You need to find out the number of vowels and the number of consonants in the given string. Note: You have to complete Count_Vowels function and Count_Consonants function. No need to take any input.</p>
+    <p><pre>Ans.10 var Count_Vowels= (S) => 
         {
-          var c=0;
-           for (i=0; i < N; i++)
+          var countV=0;
+          for (i=0; i < S.length; i++)
            {
-             if (Arr[i]>=32)
+             if ((S.charAt(i)==='A')||(S.charAt(i)==='a')||(S.charAt(i)==='E')
+                ||(S.charAt(i)==='e')||(S.charAt(i)==='I')||(S.charAt(i)==='i')||(S.charAt(i)==='O')
+                ||(S.charAt(i)==='o')||(S.charAt(i)==='U')||(S.charAt(i)==='u'))
              {
-                c++;
+                countV++; 
              }
-           }
-           if (c===N)
+           } return countV;
+        };
+        var Count_Consonants= (S) => 
+        {
+          var countC=0;
+          for (i=0; i < S.length; i++)
            {
-             return "YES";
-           }
-           else {
-             return "NO";
-           }
+             if ((S.charAt(i)!=='A')&&(S.charAt(i)!=='a')&&(S.charAt(i)!=='E')
+                &&(S.charAt(i)!=='e')&&(S.charAt(i)!=='I')&&(S.charAt(i)!=='i')&&(S.charAt(i)!=='O')
+                &&(S.charAt(i)!=='o')&&(S.charAt(i)!=='U')&&(S.charAt(i)!=='u'))
+             {
+                countC++; 
+             }
+            } return countC;   
         };</pre>
-    </p>
-    <p>Q.9 Prepbuddy is very tasteful of clothes. He has N numbers of shirts hanging in the hanger in his wardrobe.Prepbuddy likes to wear different colored clothes. So, whenever he see there are two or more shirts with the same color, he removes all the shirt of that color from his wardrobe. Now, he wants to know how many M unique color shirts are left in the wardrobe. Prepbuddy wants you to find M. Note: As there are many shades of a color so consider integers as a color name. i.e, color of shirt is 0,1,2, … , N.</p>
-    <p><pre>Ans.9 function Unique_Shirts (arr,N) {
-         var c=0;
-        for (i=0; i < N; i++)
-        { var a=0;
-          for (j=0; j < N; j++)
-          {
-            if (arr[i]==arr[j])
-            {
-              a++;
-            }
-          }
-          if (a==1)
-          {
-            c++;
-          }
-        }
-        return c;
-      }</pre>
-    </p>
-    <p>Q.10 Congratulations on making up to this question. Let us give you a fairly simple array problem to solve. If you know how to iterate through the array, you will easily be able to solve this. The problem statement is simple- given N elements, find the minimum and maximum numbers among those elements.</p>
-    <p><pre>Ans.10 function arrayMin(arr) {
-        var a=arr[0];
-          for (j=1; j < arr.length; j++)
-          {
-            if (a>arr[j])
-            {
-              a=arr[j];
-            }
-          }
-        return a;
-      }
-      
-      function arrayMax(arr) {
-        var b=arr[0];
-          for (j=1; j < arr.length; j++)
-          {
-            if (b < arr[j])
-            {
-              b=arr[j];
-            }
-          }
-        return b;
-      }</pre>
     </p>
     <p>Q.11 Prepbuddy is very tasteful of clothes. He has N numbers of shirts hanging in the hanger in his wardrobe.Prepbuddy likes to wear different colored clothes. So, whenever he see there are two or more shirts with the same color, he removes all the shirt of that color from his wardrobe. Now, he wants to know how many M unique color shirts are left in the wardrobe. Prepbuddy wants you to find M. Note: As there are many shades of a color so consider integers as a color name. i.e, color of shirt is 0,1,2, … , N.</p>
     <p><pre>Ans.11 function Unique_Shirts (arr,N) {
