--- a/index.html
+++ b/index.html
@@ -208,25 +208,28 @@
             } return countC;   
         };</pre>
     </p>
-    <p>Q.11 Prepbuddy is very tasteful of clothes. He has N numbers of shirts hanging in the hanger in his wardrobe.Prepbuddy likes to wear different colored clothes. So, whenever he see there are two or more shirts with the same color, he removes all the shirt of that color from his wardrobe. Now, he wants to know how many M unique color shirts are left in the wardrobe. Prepbuddy wants you to find M. Note: As there are many shades of a color so consider integers as a color name. i.e, color of shirt is 0,1,2, … , N.</p>
-    <p><pre>Ans.11 function Unique_Shirts (arr,N) {
-         var c=0;
-        for (i=0; i < N; i++)
-        { var a=0;
-          for (j=0; j < N; j++)
-          {
-            if (arr[i]==arr[j])
+    <p>Q.11 Tina is given a string  S which contains the first letter of all the student names in her class. She got a curiosity to check how many people have their names starting from the same alphabet. So given a string  S , she decided to write a code that finds out the count of characters that occur more than once in the string.Note: You have to complete Count Head function. No need to take any input.</p>
+    <p><pre>Ans.11 var Count_Occ = (s) => 
+      {
+         var arr=s.split("");
+         var filterarr=arr.filter((a,b) => arr.indexOf(a)!==arr.lastIndexOf(a));
+         filterarr.sort();
+         var S="";
+         var count=1;
+         for (i=0; i < filterarr.length; i++)
+         { 
+           if (filterarr[i]===filterarr[i+1])
             {
-              a++;
+              count+=1;
+            }
+            else 
+            {
+              S+=filterarr[i] + count;
+              count=1;
             }
           }
-          if (a==1)
-          {
-            c++;
-          }
-        }
-        return c;
-      }</pre>
+          return S;
+      };</pre>
     </p>
 </body>
 </html>
