--- a/index.html
+++ b/index.html
@@ -231,5 +231,12 @@
           return S;
       };</pre>
     </p>
+    <p>Q.12 You are given a string S, Your task is to split the string with respect to spaces. Note: You have to complete Split_the_String function. No need to take any input.</p>
+    <p><pre>Ans.12 var Split_the_string = (S) => 
+      {
+        var newS=S.split(" ");
+        return(newS);
+      };</pre>
+    </p>
 </body>
 </html>
